Matin/Fix: Currency selector page alignments has been fixed to follow the design

--- a/packages/core/src/sass/add-or-manage.scss
+++ b/packages/core/src/sass/add-or-manage.scss
@@ -62,10 +62,10 @@
             margin-bottom: 6rem;
             margin-left: auto;
             margin-right: auto;
-            width: 704px;
+            width: 768px;
         }
         .add-crypto-currency {
-            padding: 0 20px 20px 0;
+            padding: 0 0 2rem 0;
         }
         .dc-form-submit-button--absolute {
             position: fixed;
